# lanchaindocker

./: Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  run.sh  selenium_demo.py
chromadb/8E5E01E6/: chroma-collections.parquet  chroma-embeddings.parquet
chromadb/8E5E01E6/index/: id_to_uuid_bdacbc65-7fc1-42a5-b8c4-f9612ddd5314.pkl  index_metadata_bdacbc65-7fc1-42a5-b8c4-f9612ddd5314.pkl  uuid_to_id_bdacbc65-7fc1-42a5-b8c4-f9612ddd5314.pkl
chromadb/BA8890F7/: chroma-collections.parquet  chroma-embeddings.parquet
chromadb/BA8890F7/index/: id_to_uuid_4e6bd908-35c7-4e84-911e-774a0fce8085.pkl  index_metadata_4e6bd908-35c7-4e84-911e-774a0fce8085.pkl  uuid_to_id_4e6bd908-35c7-4e84-911e-774a0fce8085.pkl
chromadb/EBA77823/: chroma-collections.parquet  chroma-embeddings.parquet
chromadb/EBA77823/index/: id_to_uuid_80e486b7-8ee4-4fa0-bf3a-4ee558110f5d.pkl  index_metadata_80e486b7-8ee4-4fa0-bf3a-4ee558110f5d.pkl  uuid_to_id_80e486b7-8ee4-4fa0-bf3a-4ee558110f5d.pkl
demo_app/: full_app.py  main.py  orig_main.py
demo_app/components/: _extract_requirements.py  _scrape_linkedin.py  extract_sections.py  extract_text.py  generate_response.py  lc_utils.py  upload_resume.py  view_resume.py
